SL2-PLT: approvals, claims authority types, screening stub (WIP)
